helper for testing content

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "smoke": "npm run lint && mocha ./test/smoke",
     "ui": "npm run lint && wdio test/ui/config/wdio.local.conf.js",
     "lint": "eslint ./",
-    "ping": "node ./test/smoke/tests/ping.js"
+    "ping": "node ./test/smoke/tests/ping.js",
+    "helper": "mocha ./test/helpers/testContentChecker.js"
   },
   "repository": {
     "type": "git",
