Change eslint from airbnb to eslint:recommended rules

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "smoke": "npm run lint && mocha ./test/smoke",
     "ui": "npm run lint && wdio test/ui/config/wdio.local.conf.js && npm run allure",
     "lint": "eslint ./",
+    "lint:fix": "eslint --fix ./",
     "ping": "node ./test/smoke/tests/ping.js",
     "helper": "mocha ./test/helpers/testContentChecker.js",
     "requesturls": "node ./test/smoke/tests/requestUrls.js",
@@ -38,8 +39,10 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^6.5.1",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-wdio": "^5.13.2"
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-wdio": "^5.13.2",
+    "prettier": "^1.18.2"
   }
 }
