--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "smoke": "npm run lint && mocha ./test/smoke",
     "ui": "npm run lint && wdio test/ui/config/wdio.local.conf.js && npm run allure",
-    "lint": "eslint ./",
-    "lint:fix": "eslint --fix ./",
+    "lint": "eslint ./test",
+    "lint:fix": "eslint --fix ./test",
     "ping": "node ./test/smoke/tests/ping.js",
     "helper": "mocha ./test/helpers/testContentChecker.js",
     "requesturls": "node ./test/smoke/tests/requestUrls.js",
