--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "build": "make build",
     "start": "make server",
-    "smoke": "npm run lint && mocha ./test/smoke",
-    "ping": "mocha ./test/smoke/tests/ping.js",
-    "requesturls": "mocha --timeout 5000 ./test/smoke/tests/requestUrls.js",
+    "smoke": "mocha --timeout 5000 ./test/smoke/tests/requestUrls.js --reporter mochawesome",
     "ui": "npm run lint && wdio test/ui/config/wdio.local.conf.js && npm run report",
     "lint": "eslint ./test",
     "lint:fix": "eslint --fix ./test",
