--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ui": "npm run lint && wdio test/ui/config/wdio.local.conf.js && npm run report",
     "lint": "eslint ./test",
     "lint:fix": "eslint --fix ./test",
+    "accessibility": "node ./test/accessibility/accessibility.js",
     "ping": "node ./test/smoke/tests/ping.js",
     "helper": "mocha ./test/helpers/testContentChecker.js",
     "requesturls": "node ./test/smoke/tests/requestUrls.js",
@@ -33,6 +34,7 @@
     "allure-commandline": "^2.13.0",
     "bluebird": "^3.7.0",
     "mocha": "^6.2.1",
+    "pa11y": "^5.3.0",
     "ping": "^0.2.2",
     "request-promise": "^4.2.4",
     "wdio-video-reporter": "^1.4.4"
